Fixing FAQ section content alignment to start instead of center.

--- a/zenctuary-theme-starter/assets/css/components.css
+++ b/zenctuary-theme-starter/assets/css/components.css
@@ -439,8 +439,8 @@ input[type="checkbox"] {
 
 .zen-faq-section .wp-block-media-text.is-vertically-aligned-center>.wp-block-media-text__content,
 .zen-faq-section .wp-block-media-text.is-vertically-aligned-center>.wp-block-media-text__media,
-.zen-faq-section .wp-block-media-text>.wp-block-media-text__content,
-.zen-faq-section .wp-block-media-text>.wp-block-media-text__media {
+.zen-faq-section .wp-block-media-text__content,
+.zen-faq-section .wp-block-media-text__media {
   align-self: self-start;
 }
 
